# xchat

./: .env.test  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 52bdba5bb348_add_username_and_is_system_user_fields.py  b63160c4e1d2_add_system_user.py  e84453a52dc8_init.py  ec93dbbc703f_add_current_jti_to_user.py
app/: config.py  database.py  main.py  socketio_app.py
app/models/: user.py
app/routers/: dependencies.py  user.py
app/schemas/: user.py
tests/: conftest.py  test_socketio.py  test_system_users.py  test_user.py
